2006-04-10  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-file.c: some cleanup.

	(plug_in_file_register_load_handler)
	(plug_in_file_register_save_handler): first check if we have the
	procedure, then check its arguments, not the other way around
	(using an additional lookup). Old weird code was needed because
	these functions were split between app/plug-in and app/pdb.

	* app/plug-in/plug-in-file.h: whitespace.

2006-04-10  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpzoommodel.c (gimp_zoom_model_zoom_step):
	declared the array of zoom factors as const.

2006-04-10  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.[ch]: take const arrays of action
	entries.

	* app/actions/*-actions.c: declare action arrays as const.

2006-04-10  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-ins.[ch]: removed the plug_ins_file_foo()
	functions.

	* tools/pdbgen/pdb/fileops.pdb: removed lots of load and save
	handler register code.

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-file.[ch]: added everything in these new
	files. Load and save handlers are installed with
	plug_in_file_register_load_handler() and _save_handler() which
	also check the passed file procedure's parameters.

	* app/pdb/fileops_cmds.c: regenerated.

2006-04-09  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-ins-help.[ch]
	* app/plug-in/plug-ins-locale.[ch]: remove these files again...

	* app/plug-in/plug-in-help-domain.[ch]
	* app/plug-in/plug-in-locale-domain.[ch]: ... and add them here
	with changed namespace.

	* app/plug-in/plug-in-menu-branch.[ch]: new files keeping menu
	branches registered by plug-ins.

	* app/plug-in/plug-ins.[ch]: removed the menu branch stuff here.

	* app/actions/plug-in-actions.c
	* app/menus/plug-in-menus.c
	* app/plug-in/plug-in.c
	* app/widgets/gimpfiledialog.c
	* app/widgets/gimpfileprocview.c
	* app/widgets/gimphelp.c
	* tools/pdbgen/pdb/help.pdb