@@ -22,6 +22,9 @@
 #define __FILE_UTILS_H__
 
 
+#include <gdk-pixbuf/gdk-pixbuf.h>
+
+
 gchar               * file_utils_filename_to_uri        (GSList        *procs,
                                                          const gchar   *filename,
                                                          GError       **error);
@@ -36,6 +39,10 @@ GimpPlugInProcedure * file_utils_find_proc              (GSList        *procs,
                                                          const gchar   *filename);
 GimpPlugInProcedure * file_utils_find_proc_by_extension (GSList        *procs,
                                                          const gchar   *uri);
+
+GdkPixbuf           * file_utils_load_thumbnail         (const gchar   *filename);
+gboolean              file_utils_save_thumnail          (GimpImage     *image,
+                                                         const gchar   *filename);
 
 
 #endif /* __FILE_UTILS_H__ */
